helm/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: traefik-192-168-2-100.traefik.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - traefik-192-168-2-100.traefik.me
      secretName: traefik-tls
